--- a/Resources/translations/messages.en.yaml
+++ b/Resources/translations/messages.en.yaml
@@ -1,8 +1,8 @@
-'This page is locked': null
-Close: null
-'This page is locked because another user is working on it. Please wait: the page will be unlocked automatically when the other user has finished, and you will be informed.': null
-'Locked by %userName%.': null
-Back: null
-'Check again': null
-'Ignore lock': null
-'Error! Lock broken!': null
+'This page is locked': 'This page is locked'
+Close: Close
+'This page is locked because another user is working on it. Please wait: the page will be unlocked automatically when the other user has finished, and you will be informed.': 'This page is locked because another user is working on it. Please wait: the page will be unlocked automatically when the other user has finished, and you will be informed.'
+'Locked by %userName%.': 'Locked by %userName%.'
+Back: Back
+'Check again': 'Check again'
+'Ignore lock': 'Ignore lock'
+'Error! Lock broken!': 'Error! Lock broken!'
